data/derived/comb/progs/unify/prog2561.ml.out
Characters 92-96:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
